[package]
name = "td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
bevy_egui = "0.19.0"
bevy_pixel_camera = "0.3.0"
bevy_prototype_debug_lines = "0.9.0"
combination = "0.2.2"
serde = "1.0.152"
serde_json = "1.0.91"
